--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.8",
     "react-particles-js": "^3.5.3",
     "react-popupbox": "^2.0.8",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-share": "^4.4.0",
+    "react-social": "^1.10.0",
+    "react-social-icons": "^5.6.1",
     "react-tsparticles": "^1.34.0",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.34.0",
